Changes to api doc + set up scheduleController
This scheduleController exports a single function for the API returning a hard coded array of routes.
The logic in the controllers might be abstracted out into a number of services returning promises.
